# Resume_agent

./: README.md  livekit.toml  pyproject.toml  resume.txt
.github/workflows/: keep-warm.yml
resume_entries/: chroma.sqlite3
resume_vectordb/: chroma.sqlite3
src/: agent.py  persona.py  resume.txt
src/resume_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
