[project]
name = "resume-agent"
version = "0.1.0"
description = "Aditya's voice AI resume assistant built on LiveKit Agents"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,silero,deepgram,sarvam]~=1.5.17",
    "livekit-plugins-sarvam~=1.5.13",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]